Fork 'Cloud-to-Butt' and prep release

--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 2,
-	"name": "Cloud To Butt",
+	"name": "It's Bitcoin Cash",
 	"version": "1.0",
-	"description": "Replaces the text 'the cloud' with 'my butt'.",
-	"content_scripts": 
+	"description": "Replaces the text 'Bcash' with the official recognized name 'Bitcoin Cash'.",
+	"content_scripts":
 	[
 		{
 			"matches": ["*://*/*"],
