--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "It's Bitcoin Cash",
-	"version": "1.0",
+	"version": "1.1",
 	"description": "Replaces the text 'Bcash' with the official recognized name 'Bitcoin Cash'.",
 	"content_scripts":
 	[
@@ -10,6 +10,7 @@
 			"js": ["content_script.js"],
 			"run_at": "document_end"
 		}
-	]
+	],
+  "icons": { "128": "chrome_web_store_icon.png" }
 }
 
